--- a/Front-End/src/app/Property/property-card/property-card.component.html
+++ b/Front-End/src/app/Property/property-card/property-card.component.html
@@ -1,1 +1,12 @@
-<p>property-card works!</p>
+<div class="row">
+<div class="shadow-lg">
+  <div class="card">
+  <img class="propImg" src="assets/images/house-2.jpg">
+  <div class="card-body p-2">  
+  <h1>{{Property.Name}}</h1>
+  <h2>{{Property.Type}}</h2>
+  <h3>{{Property.Price}}</h3>
+</div>
+</div>
+</div>
+</div>
