--- a/Front-End/src/app/app.component.html
+++ b/Front-End/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-property-list></app-property-list>
-<app-property-card></app-property-card>
+<app-nav-bar></app-nav-bar>
+<div class="container" style="margin-top: 70px;">
+    <app-property-card></app-property-card>
+    <app-property-list></app-property-list>
+</div>
